force-app/main/default/objects/BigMachines__Configuration_Record__c/BigMachines__Configuration_Record__c.object-meta.xml
<CustomObject>
    <description>A set of parameters used for integrating a Oracle CPQ Cloud site to this Salesforce org.</description>
    <label>Oracle CPQ Cloud Site</label>
    <nameField>
        <displayFormat>SITE-{000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oracle CPQ Cloud Site Setup</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>