force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__action_id_copy__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__action_id_copy__c</fullName>
    <inlineHelpText>action_id_copy</inlineHelpText>
    <label>Copy Action ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>