force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__API_Password__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__API_Password__c</fullName>
    <label>API Admin Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>