force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Default_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Default_Access_Type__c</fullName>
    <description>Default value for Oracle_User__c.Allow_Quote_Creation__c for new users associated with this CPQ Site.</description>
    <label>Default Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FullAccess</fullName>
            </value>
            <value>
                <fullName>SalesAgent</fullName>
            </value>
            <value>
                <fullName>ChannelAgent</fullName>
            </value>
            <value>
                <fullName>BuyAccess</fullName>
            </value>
            <value>
                <fullName>RestrictedAccess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>