force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Default_Allow_Quote_Creation__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Default_Allow_Quote_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default value for Oracle_User__c.Allow_Quote_Creation__c for new users associated with this CPQ Site.</description>
    <label>Default Allow Quote Creation</label>
    <type>Checkbox</type>
</CustomField>