force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Default_Association_to_Organization__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Default_Association_to_Organization__c</fullName>
    <description>Default value for Oracle_User__c.Association_to_Organization__c for new users associated with this CPQ Site.</description>
    <label>Default Association to Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal User</fullName>
            </value>
            <value>
                <fullName>Partner User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>