force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Default_Currency_Preference__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Default_Currency_Preference__c</fullName>
    <description>Default value for Oracle_User__c.Currency_Preference__c for new users associated with this CPQ Site.</description>
    <label>Default Currency Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>