force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Default_Date_Time_Format__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Default_Date_Time_Format__c</fullName>
    <description>Default value for Oracle_User__c.Date_Time_Format__c for new users associated with this CPQ Site.</description>
    <label>Default Date/Time Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MM/dd/yyyy h:mm a</fullName>
            </value>
            <value>
                <fullName>MM/dd/yyyy HH:mm</fullName>
            </value>
            <value>
                <fullName>dd/MM/yyyy HH:mm</fullName>
            </value>
            <value>
                <fullName>dd.MM.yyyy HH:mm</fullName>
            </value>
            <value>
                <fullName>yyyy/MM/dd HH:mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>