force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Default_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Default_Number_Format__c</fullName>
    <description>Default value for Oracle_User__c.Number_Format__c for new users associated with this CPQ Site.</description>
    <label>Default Number Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>####.##</fullName>
            </value>
            <value>
                <fullName>####,##</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>