force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Default_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Default_Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default value for Oracle_User__c.Provisioned__c for new users associated with this CPQ Site.</description>
    <label>Default Synch with Oracle CPQ Cloud</label>
    <type>Checkbox</type>
</CustomField>