force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Default_User_Groups__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Default_User_Groups__c</fullName>
    <description>Default value for Oracle_User__c.User_Groups__c for new users associated with this CPQ Site.</description>
    <label>Default User Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>a100kparts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>