force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Description__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>