force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__document_id__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__document_id__c</fullName>
    <inlineHelpText>document_id</inlineHelpText>
    <label>Document ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>