force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary?</label>
    <type>Checkbox</type>
</CustomField>