force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Primary_Commerce_Process__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Primary_Commerce_Process__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Multiple commerce processes on a CPQ instance can integrated with Salesforce.  Unchecking this field indicates that this CPQ Cloud Site will be used to integrate with a second commerce process.  As commerce processes share users, secondary commerce processes cannot synchronize users.</description>
    <inlineHelpText>Leave this field checked unless integrating with a second commerce process.</inlineHelpText>
    <label>Primary Commerce Process</label>
    <type>Checkbox</type>
</CustomField>