force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Use_Default_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Use_Default_Access_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Access Type</label>
    <type>Checkbox</type>
</CustomField>