force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Use_Default_Association_to_Organization__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Use_Default_Association_to_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Association to Organization</label>
    <type>Checkbox</type>
</CustomField>