force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Use_Default_Bulk_Synchronization__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Use_Default_Bulk_Synchronization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Suspend Oracle CPQ Synch</label>
    <type>Checkbox</type>
</CustomField>