force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Use_Default_Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Use_Default_Language_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Language Preference</label>
    <type>Checkbox</type>
</CustomField>