force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Use_Default_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Use_Default_Time_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Time Zone</label>
    <type>Checkbox</type>
</CustomField>