force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Use_Default_Unit_System__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Use_Default_Unit_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Unit System</label>
    <type>Checkbox</type>
</CustomField>