force-app/main/default/objects/BigMachines__Configuration_Record__c/fields/BigMachines__Uses_SSL__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Uses_SSL__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Uses SSL?</label>
    <type>Checkbox</type>
</CustomField>